# cookiecutter-templates

./: README.md
django-project-template/: cookiecutter.json
django-project-template/hooks/: post_gen_project.py
django-project-template/{{cookiecutter.project_slug}}/: .dockerignore  .python-version  Dockerfile  docker-compose.yml  docker-compose.yml.j2  env_template  if_use_tailwind_package.json  manage.py  pyproject.toml  {% if cookiecutter.use_docker %}Dockerfile{% endif %}  {% if cookiecutter.use_docker %}docker-compose.yml.j2{% endif %}  {% if cookiecutter.use_docker %}docker-compose.yml{% endif %}
django-project-template/{{cookiecutter.project_slug}}/.github/workflows/: cicd.yml
django-project-template/{{cookiecutter.project_slug}}/config/: asgi.py  settings.py  urls.py  wsgi.py
django-project-template/{{cookiecutter.project_slug}}/core/: asgi.py  models.py  urls.py  wsgi.py
django-project-template/{{cookiecutter.project_slug}}/core/routers/: db.py
django-project-template/{{cookiecutter.project_slug}}/core/routers/db/: __init__.py  admin_router.py  default_router.py
django-project-template/{{cookiecutter.project_slug}}/core/settings/: __init__.py  settings.py  settings_auth.py  settings_db.py  settings_debug_toolbar.py  settings_logging.py  settings_media.py
django-project-template/{{cookiecutter.project_slug}}/if_use_postgres_initdb/: schema.sql
django-project-template/{{cookiecutter.project_slug}}/templates/: index.html  {{ cookiecutter.initial_app_name }}.html
django-project-template/{{cookiecutter.project_slug}}/test_app1/: README.md  apps.py  models.py  views.py
django-project-template/{{cookiecutter.project_slug}}/test_app1/routers/: __init__.py  test_app1_db_router.py
django-project-template/{{cookiecutter.project_slug}}/test_app1/templates/: test_app1.html
django-project-template/{{cookiecutter.project_slug}}/{{cookiecutter.initial_app_name}}/: README.md  apps.py  asgi.py  models.py  urls.py  wsgi.py
django-project-template/{{cookiecutter.project_slug}}/{{cookiecutter.initial_app_name}}/if_use_tailwind_theme/: apps.py
django-project-template/{{cookiecutter.project_slug}}/{{cookiecutter.initial_app_name}}/if_use_tailwind_theme/static_src/: package.json
django-project-template/{{cookiecutter.project_slug}}/{{cookiecutter.initial_app_name}}/if_use_tailwind_theme/templates/: base.html
django-project-template/{{cookiecutter.project_slug}}/{{cookiecutter.initial_app_name}}/routers/: __init__.py  {{cookiecutter.initial_app_name}}_db_router.py
django-project-template/{{cookiecutter.project_slug}}/{{cookiecutter.initial_app_name}}/settings/: settings.py  settings_db.py  settings_logging.py
django-project-template/{{cookiecutter.project_slug}}/{{cookiecutter.initial_app_name}}/templates/: index.html
